force-app/main/default/objects/Claim__c/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <label>Incident Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>