force-app/main/default/objects/Claim__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <label>Notification Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>