force-app/main/default/objects/Claim__c/fields/Type_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loss__c</fullName>
    <label>Type of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Break-in</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Fire Alarm</fullName>
            </value>
            <value>
                <fullName>Stock damage</fullName>
            </value>
            <value>
                <fullName>Water damage</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>