force-app/main/default/objects/Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type_of_Loss__c</columns>
    <columns>Date_of_Incident__c</columns>
    <columns>Description_of_Incident__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>